--- a/src/components/layout/footer/index.astro
+++ b/src/components/layout/footer/index.astro
@@ -17,6 +17,10 @@ const customerServiceLinks:ILink[] = [
         url:'/terms/returns-refunds'
     },
     {
+        name:'Jewellery Care Guide',
+        url:'/jewellery-care-guide'
+    },
+    {
         name:'Contact Us',
         url:'/contact'
     },
