--- a/src/components/shop/intro.astro
+++ b/src/components/shop/intro.astro
@@ -16,7 +16,7 @@ const itemPerGroup = 24
 
 <div 
     id="shop-container" 
-    class="pt-3 px-3 md:px-4 grid grid-cols-2 gap-x-1 2xs:gap-x-2 sm:grid-cols-3 md:gap-x-4 2xl:grid-cols-4 gap-y-8"
+    class="pt-3 pb-5 px-3 md:px-4 grid grid-cols-2 gap-x-1 2xs:gap-x-2 sm:grid-cols-3 md:gap-x-4 2xl:grid-cols-4 gap-y-8"
     data-product-ids={JSON.stringify(productIDs)}
 >
     {productIDs.map((id,i)=>(
