--- a/src/components/catalogue-item/product.astro
+++ b/src/components/catalogue-item/product.astro
@@ -26,16 +26,16 @@ const finalImages = images.filter(e=>e.catalogue)
     <div id=`catalogue-product-container-${id}` class="w-full relative width-1/2 pb-[100%] mouse:overflow-hidden">
         <Carousel images={finalImages} id={id} renderImages={renderImages} imageSize={768} />
         <div class="touchscreen:hidden">
-            <button id=`catalogue-carousel-${id}-leftward` class=`${finalImages.length < 2 ? 'hidden' : ''} leftward absolute top-0 h-full left-0 w-2/12 duration-500 transition-all bg-gradient-to-r from-gray-400 to-transparent opacity-0 peer/left mouse:hover:opacity-10` />
+            <button aria-label="Previous Image" id=`catalogue-carousel-${id}-leftward` class=`${finalImages.length < 2 ? 'hidden' : ''} leftward absolute top-0 h-full left-0 w-2/12 duration-500 transition-all bg-gradient-to-r from-gray-400 to-transparent opacity-0 peer/left mouse:hover:opacity-10` />
             <svg viewBox="0 0 70 100" height="1em" stroke-width="0.8rem" stroke-linecap="round" fill="none" class=`${finalImages.length < 2 ? 'hidden' : ''} absolute left-2 stroke-gray-700 opacity-0 duration-500 mouse:group-hover:opacity-30 peer-hover/left:opacity-100 pointer-events-none` style="top:calc(50% - 0.5em)">
                 <polyline points="65,5 20,50 65,95" />
             </svg>
-            <button id=`catalogue-carousel-${id}-rightward` class=`${finalImages.length < 2 ? 'hidden' : ''} rightward absolute top-0 h-full right-0 w-2/12 duration-500 transition-all bg-gradient-to-l from-gray-400 to-transparent opacity-0 peer/right mouse:hover:opacity-10` />
+            <button aria-label="Next Image" id=`catalogue-carousel-${id}-rightward` class=`${finalImages.length < 2 ? 'hidden' : ''} rightward absolute top-0 h-full right-0 w-2/12 duration-500 transition-all bg-gradient-to-l from-gray-400 to-transparent opacity-0 peer/right mouse:hover:opacity-10` />
             <svg viewBox="0 0 70 100" height="1em" stroke-width="0.8rem" stroke-linecap="round" fill="none" class=`${finalImages.length < 2 ? 'hidden' : ''} absolute right-2 stroke-gray-700 opacity-0 duration-500 mouse:group-hover:opacity-30 peer-hover/right:opacity-100 pointer-events-none` style="top:calc(50% - 0.5em)">
                 <polyline points="5,5 50,50 5,95" />
             </svg>
             <div id=`catalogue-add-to-bag-${id}` class=`add-to-bag-mouse flex justify-center absolute w-full bottom-0 translate-y-full duration-500 mouse:group-hover:-translate-y-5`>
-                <button class="rounded-full p-2 xs:p-2.5 sm:p-3 shadow-lg bg-white mouse:hover:shadow-gray-300">
+                <button aria-label="Add to Bag" class="rounded-full p-2 xs:p-2.5 sm:p-3 shadow-lg bg-white mouse:hover:shadow-gray-300">
                     <ShoppingBag className="shopping-bag-icon h-5 w-5 xs:h-6 xs:w-6 sm:h-7 sm:w-7 stroke-[0.2rem] stroke-black fill-none" />
                     <LoadingSmall className="h-5 w-5 xs:h-6 xs:w-6 sm:h-7 sm:w-7 stroke-[0.2rem] fill-gray-500 animate-spin hidden" />
                 </button>
