--- a/src/components/product-page/sub-text.astro
+++ b/src/components/product-page/sub-text.astro
@@ -9,7 +9,7 @@ const inputID = title.toLowerCase().replace(' ','-')
 <div>
     <input type="checkbox" hidden id={inputID} class="peer product-subtext-checkbox" />
     <label for={inputID} class="flex justify-between cursor-pointer peer-checked:[&>svg>line:first-child]:hidden">
-        <h2 class="font-serif py-3 uppercase [letter-spacing:0.3rem] [word-spacing:0.3rem] text-sm sm:text-base md:text-lg">{title}</h2>
+        <h2 class="font-serif py-3 uppercase [letter-spacing:0.3rem] text-sm sm:text-base md:text-lg">{title}</h2>
         <svg viewBox="0 0 100 100" class="w-4 h-4 my-auto" stroke="black" stroke-width="0.4em">
             <line x1="50" y1="5" x2="50" y2="95" />
             <line x1="5" y1="50" x2="95" y2="50" />
