--- a/src/pages/sign-up.astro
+++ b/src/pages/sign-up.astro
@@ -2,21 +2,21 @@
 import Layout from '../components/layout/index.astro';
 import SignUpForm from '../components/sign-up-form/index.astro';
 import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
-import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
+import { FM_CLIENT_WEBSHOP_API_URL, FM_IS_ONLINE } from 'astro:env/server'
 // import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 import { headerCarouselOffKey } from '@misc'
 import { acceptMembership } from '@misc/env-vars';
 
 if (!acceptMembership) return new Response(null,{status:404})
 
-const isProduction = FM_ENV_MODE === 'production'
+const isOnline = FM_IS_ONLINE === 'true'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
 const headerCarouselOff = Astro.cookies.has(headerCarouselOffKey)
 
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/sign-up-page-init`,{
     headers:httpRequestHeader(true,'SSR',true,initialSessionID,Astro.clientAddress,!headerCarouselOff)
 })
-if (!resp.ok) return Astro.redirect('/')
+if (!resp.ok) return new Response(null,{status:500})
 
 const json = await resp.json()
 const {mdwResponse} = json as {mdwResponse: IMdwResponse}
@@ -37,7 +37,7 @@ const {
 } = mdwResponse
 
 if ( signedIn ) return Astro.redirect('/')
-else Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isProduction,expiresAt))
+else Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isOnline,expiresAt))
 
 const shoppingBagProp:IShoppingBagSidebarProp = {
     isSignedIn:signedIn,
@@ -47,7 +47,7 @@ const shoppingBagProp:IShoppingBagSidebarProp = {
     productDetailsMap:cartProductDetailsMap
 }
 
-Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOption(isProduction))
+Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOption(isOnline))
 ---
 
 <Layout {...{
