--- a/src/pages/track-order.astro
+++ b/src/pages/track-order.astro
@@ -3,7 +3,7 @@ import { httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppi
 import Layout from '@components/layout/index.astro'
 import TrackOrderForm from '@components/track-order/form.astro'
 import OrderContainer from "@components/track-order/order-container.astro";
-import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
+import { FM_CLIENT_WEBSHOP_API_URL, FM_IS_ONLINE } from 'astro:env/server'
 // import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 import { headerCarouselOffKey } from '@misc'
 
@@ -15,16 +15,13 @@ const { searchParams } = Astro.url
 const orderIdString = searchParams.has('order') ? searchParams.get('order') : '0'
 const orderID = isNaN(+orderIdString) ? 0 : +orderIdString
 
-const isProduction = FM_ENV_MODE === 'production'
+const isOnline = FM_IS_ONLINE === 'true'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
 const headerCarouselOff = Astro.cookies.has(headerCarouselOffKey)
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/track-order-page-init/${orderID}`,{
     headers:httpRequestHeader(true,'SSR',true,initialSessionID,Astro.clientAddress,!headerCarouselOff)
 })
-if (!resp.ok) {
-    console.log(await resp.text())
-    return
-}
+if (!resp.ok) return new Response(null,{status:500})
 const {
     mdwResponse:{
         expiresAt,
@@ -43,7 +40,7 @@ const {
     }, apiResponse:{order}
 } = await resp.json() as {mdwResponse: IMdwResponse; apiResponse:IApiResponse; }
 
-Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isProduction,expiresAt))
+Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isOnline,expiresAt))
 
 const shoppingBagProp:IShoppingBagSidebarProp = {
     isSignedIn:signedIn,
@@ -53,7 +50,7 @@ const shoppingBagProp:IShoppingBagSidebarProp = {
     productDetailsMap:cartProductDetailsMap
 }
 
-Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOption(isProduction))
+Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOption(isOnline))
 ---
 <Layout {...{
     shoppingBagProp,
