--- a/src/components/layout/header/shopping-bag-sidebar.astro
+++ b/src/components/layout/header/shopping-bag-sidebar.astro
@@ -13,8 +13,8 @@ const cartItemMap = props?.cartItemMap || {}
 const productDetailsMap = props?.productDetailsMap || {}
 const cartContent = props?.cartContent || {
     staffDiscount:0,
-    campaignDiscount:0,
-    campaignName:'',
+    campaignDiscounts:[],
+    voucherDiscounts:[],
     memberDiscount:0,
     memberDiscountRate:0,
     subtotalBeforeDelivery:0,
