--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -206,7 +206,7 @@ const productSchema = isProductPage ? {
     src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback"
     defer
   ></script>
-  <script src="/cdn-cgi/zaraz/i.js" referrerpolicy="origin"></script>
+  {/* <script src="/cdn-cgi/zaraz/i.js" referrerpolicy="origin"></script> */}
 </head>
 <body 
   data-pip={paymentInProcess ? 1 : 0} 
