--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -282,6 +282,7 @@ memberTotalToPay,
 shoppingBagLoaded,
 turnstilePassed,
 } from "@stores"
+import { companyNameShort, imageUrlPrefix } from '@misc'
 
 declare global {
   interface Window {
@@ -365,4 +366,8 @@ const faviconSvg = document.getElementById('favicon-svg') as HTMLLinkElement
 window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change',(e)=>{
   if (!!faviconSvg) faviconSvg.href = `/favicon-${e.matches ? 'dark' : 'light'}.svg`
 })
+
+console.log('turnstile key: ', turnstileSiteKey)
+console.log('company name: ', companyNameShort)
+console.log('image prefix: ', imageUrlPrefix)
 </script>
